--- a/fps.html
+++ b/fps.html
@@ -1,21 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>SkeS</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
+</head>
+<body>
 <script type="module">
   import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.module.js';
   import { PointerLockControls } from 'https://cdn.jsdelivr.net/npm/three@0.150.1/examples/jsm/controls/PointerLockControls.js';
 
+  // === Setup Scene, Camera, Renderer ===
   const scene = new THREE.Scene();
   const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
   const renderer = new THREE.WebGLRenderer();
   renderer.setSize(window.innerWidth, window.innerHeight);
   document.body.appendChild(renderer.domElement);
 
-  // Lantai
+  // === Lantai ===
   const floorGeo = new THREE.PlaneGeometry(100,100);
   const floorMat = new THREE.MeshBasicMaterial({color:0x888888});
   const floor = new THREE.Mesh(floorGeo,floorMat);
   floor.rotation.x = -Math.PI/2;
   scene.add(floor);
 
-  // Pohon
+  // === Fungsi Dinding Batu ===
+  function addWall(x,y,z,w,h,d){
+    const geo = new THREE.BoxGeometry(w,h,d);
+    const mat = new THREE.MeshBasicMaterial({color:0x333333});
+    const wall = new THREE.Mesh(geo,mat);
+    wall.position.set(x,y,z);
+    scene.add(wall);
+  }
+
+  // Contoh dinding sesuai sketsa (bisa ditambah lagi)
+  addWall(0,2.5,-20,40,5,1);   // dinding horizontal belakang
+  addWall(-20,2.5,-10,1,5,20); // dinding vertikal kiri
+  addWall(20,2.5,-10,1,5,20);  // dinding vertikal kanan
+  addWall(0,2.5,0,40,5,1);     // dinding horizontal depan
+
+  // === Fungsi Pohon ===
   function addTree(x,z){
     const trunkGeo = new THREE.CylinderGeometry(0.5,0.5,2,8);
     const trunkMat = new THREE.MeshBasicMaterial({color:0x8B4513});
@@ -29,25 +56,17 @@
     leaf.position.set(x,3,z);
     scene.add(leaf);
   }
+
+  // Pohon sesuai titik hijau di sketsa
   addTree(-10,-10);
   addTree(10,-10);
 
-  // Dinding
-  function addWall(x,y,z,w,h,d){
-    const geo = new THREE.BoxGeometry(w,h,d);
-    const mat = new THREE.MeshBasicMaterial({color:0x333333});
-    const wall = new THREE.Mesh(geo,mat);
-    wall.position.set(x,y,z);
-    scene.add(wall);
-  }
-  addWall(0,2.5,-20,40,5,1);
-
-  // Kamera & Kontrol
+  // === Kamera & Kontrol FPS ===
   const controls = new PointerLockControls(camera, document.body);
   document.body.addEventListener('click', () => controls.lock());
   camera.position.set(0,1.6,10);
 
-  // WASD
+  // === Gerakan WASD ===
   const keys={};
   document.addEventListener('keydown',e=>keys[e.code]=true);
   document.addEventListener('keyup',e=>keys[e.code]=false);
@@ -59,7 +78,7 @@
     if(keys['KeyD'])controls.moveRight(speed);
   }
 
-  // Animasi
+  // === Animasi ===
   function animate(){
     requestAnimationFrame(animate);
     movePlayer();
@@ -67,3 +86,5 @@
   }
   animate();
 </script>
+</body>
+</html>
