--- a/fps.html
+++ b/fps.html
@@ -1,86 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Sketsa 3D FPS</title>
-  <style>
-    body { margin: 0; overflow: hidden; }
-    canvas { display: block; }
-  </style>
+    <meta charset="utf-8">
+    <title>Babylon.js FPS Demo</title>
+    <style>
+        html, body { width: 100%; height: 100%; margin: 0; overflow: hidden; }
+        canvas { width: 100%; height: 100%; display: block; }
+    </style>
 </head>
 <body>
-<script type="module">
-  import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.module.js';
-  import { PointerLockControls } from 'https://cdn.jsdelivr.net/npm/three@0.150.1/examples/jsm/controls/PointerLockControls.js';
+    <canvas id="renderCanvas"></canvas>
 
-  // === Setup Scene, Camera, Renderer ===
-  const scene = new THREE.Scene();
-  const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-  const renderer = new THREE.WebGLRenderer();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  document.body.appendChild(renderer.domElement);
+    <!-- CDN Babylon.js -->
+    <script src="https://cdn.babylonjs.com/babylon.js"></script>
+    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
 
-  // === Lantai ===
-  const floorGeo = new THREE.PlaneGeometry(100,100);
-  const floorMat = new THREE.MeshBasicMaterial({color:0x888888});
-  const floor = new THREE.Mesh(floorGeo,floorMat);
-  floor.rotation.x = -Math.PI/2;
-  scene.add(floor);
+    <script>
+        // === Setup Engine & Scene ===
+        const canvas = document.getElementById("renderCanvas");
+        const engine = new BABYLON.Engine(canvas, true);
+        const scene = new BABYLON.Scene(engine);
 
-  // === Dinding Batu ===
-  function addWall(x,y,z,w,h,d){
-    const geo = new THREE.BoxGeometry(w,h,d);
-    const mat = new THREE.MeshBasicMaterial({color:0x333333});
-    const wall = new THREE.Mesh(geo,mat);
-    wall.position.set(x,y,z);
-    scene.add(wall);
-  }
-  addWall(0,2.5,-20,40,5,1);
-  addWall(-20,2.5,-10,1,5,20);
-  addWall(20,2.5,-10,1,5,20);
-  addWall(0,2.5,0,40,5,1);
+        // === Kamera FPS ===
+        const camera = new BABYLON.UniversalCamera("camera", new BABYLON.Vector3(0, 2, -10), scene);
+        camera.attachControl(canvas, true);
+        camera.speed = 0.5; // kecepatan WASD
+        camera.angularSensibility = 500; // sensitivitas mouse
 
-  // === Pohon ===
-  function addTree(x,z){
-    const trunkGeo = new THREE.CylinderGeometry(0.5,0.5,2,8);
-    const trunkMat = new THREE.MeshBasicMaterial({color:0x8B4513});
-    const trunk = new THREE.Mesh(trunkGeo,trunkMat);
-    trunk.position.set(x,1,z);
-    scene.add(trunk);
+        // === Cahaya ===
+        const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0), scene);
 
-    const leafGeo = new THREE.SphereGeometry(1.5,8,8);
-    const leafMat = new THREE.MeshBasicMaterial({color:0x00ff00});
-    const leaf = new THREE.Mesh(leafGeo,leafMat);
-    leaf.position.set(x,3,z);
-    scene.add(leaf);
-  }
-  addTree(-10,-10);
-  addTree(10,-10);
+        // === Lantai ===
+        const ground = BABYLON.MeshBuilder.CreateGround("ground", {width:100, height:100}, scene);
+        ground.material = new BABYLON.StandardMaterial("groundMat", scene);
+        ground.material.diffuseColor = new BABYLON.Color3(0.5,0.5,0.5);
 
-  // === Kamera & Kontrol FPS ===
-  const controls = new PointerLockControls(camera, document.body);
-  document.body.addEventListener('click', () => controls.lock());
-  camera.position.set(0,1.6,10);
+        // === Fungsi Dinding Batu ===
+        function addWall(x,z,w,h){
+            const wall = BABYLON.MeshBuilder.CreateBox("wall", {width:w, height:h, depth:1}, scene);
+            wall.position = new BABYLON.Vector3(x, h/2, z);
+            wall.material = new BABYLON.StandardMaterial("wallMat", scene);
+            wall.material.diffuseColor = new BABYLON.Color3(0.2,0.2,0.2);
+        }
 
-  // === Gerakan WASD ===
-  const keys={};
-  document.addEventListener('keydown',e=>keys[e.code]=true);
-  document.addEventListener('keyup',e=>keys[e.code]=false);
-  function movePlayer(){
-    const speed=0.1;
-    if(keys['KeyW'])controls.moveForward(speed);
-    if(keys['KeyS'])controls.moveForward(-speed);
-    if(keys['KeyA'])controls.moveRight(-speed);
-    if(keys['KeyD'])controls.moveRight(speed);
-  }
+        // Tambahkan dinding sesuai denah
+        addWall(0,-20,40,5);
+        addWall(-20,-10,1,5);
+        addWall(20,-10,1,5);
+        addWall(0,0,40,5);
 
-  // === Animasi ===
-  function animate(){
-    requestAnimationFrame(animate);
-    movePlayer();
-    renderer.render(scene,camera);
-  }
-  animate();
-</script>
+        // === Fungsi Pohon ===
+        function addTree(x,z){
+            // batang
+            const trunk = BABYLON.MeshBuilder.CreateCylinder("trunk", {diameter:1, height:3}, scene);
+            trunk.position = new BABYLON.Vector3(x,1.5,z);
+            trunk.material = new BABYLON.StandardMaterial("trunkMat", scene);
+            trunk.material.diffuseColor = new BABYLON.Color3(0.55,0.27,0.07);
+
+            // daun
+            const leaves = BABYLON.MeshBuilder.CreateSphere("leaves", {diameter:3}, scene);
+            leaves.position = new BABYLON.Vector3(x,4,z);
+            leaves.material = new BABYLON.StandardMaterial("leafMat", scene);
+            leaves.material.diffuseColor = new BABYLON.Color3(0,1,0);
+        }
+
+        // Pohon sesuai titik hijau
+        addTree(-10,-10);
+        addTree(10,-10);
+
+        // === Render Loop ===
+        engine.runRenderLoop(() => {
+            scene.render();
+        });
+
+        window.addEventListener("resize", () => {
+            engine.resize();
+        });
+    </script>
 </body>
 </html>
