--- a/fps.html
+++ b/fps.html
@@ -11,10 +11,7 @@
 <body>
   <canvas id="renderCanvas"></canvas>
 
-  <!-- Babylon.js CDN -->
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
-  <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-
   <script>
     const canvas = document.getElementById("renderCanvas");
     const engine = new BABYLON.Engine(canvas, true);
@@ -24,59 +21,64 @@
     const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0), scene);
 
     // === Kamera FPS ===
-    const camera = new BABYLON.UniversalCamera("camera", new BABYLON.Vector3(0, 2, -10), scene);
+    const camera = new BABYLON.UniversalCamera("camera", new BABYLON.Vector3(0, 2, 0), scene);
     camera.attachControl(canvas, true);
     camera.speed = 0.5;
     camera.angularSensibility = 500;
 
-    // Aktifkan collision & gravity
+    // === Aktifkan Collision & Gravity ===
+    scene.gravity = new BABYLON.Vector3(0, -0.5, 0);
     scene.collisionsEnabled = true;
     camera.checkCollisions = true;
     camera.applyGravity = true;
-    scene.gravity = new BABYLON.Vector3(0, -0.5, 0);
+    camera.ellipsoid = new BABYLON.Vector3(0.5, 1, 0.5);
+    camera.ellipsoidOffset = new BABYLON.Vector3(0, 1, 0);
 
-    // === Lantai dengan collision ===
+    // === Lantai ===
     const ground = BABYLON.MeshBuilder.CreateGround("ground", {width:100, height:100}, scene);
     ground.checkCollisions = true;
     const groundMat = new BABYLON.StandardMaterial("groundMat", scene);
     groundMat.diffuseColor = new BABYLON.Color3(0.5,0.5,0.5);
     ground.material = groundMat;
 
-    // === Tekstur batu untuk dinding ===
+    // === Tekstur Batu untuk Dinding ===
     const wallMat = new BABYLON.StandardMaterial("wallMat", scene);
     wallMat.diffuseTexture = new BABYLON.Texture("https://assets.babylonjs.com/environments/stone.jpg", scene);
 
-    // === Fungsi Dinding Batu ===
-    function addWall(x,z,w,h){
-      const wall = BABYLON.MeshBuilder.CreateBox("wall", {width:w, height:h, depth:1}, scene);
-      wall.position = new BABYLON.Vector3(x, h/2, z);
+    // === Fungsi Tambah Dinding dari Denah ===
+    function addWall(x, z, w, h, d = 1) {
+      const wall = BABYLON.MeshBuilder.CreateBox("wall", {width: w, height: h, depth: d}, scene);
+      wall.position = new BABYLON.Vector3(x, h / 2, z);
       wall.material = wallMat;
-      wall.checkCollisions = true; // dinding padat
+      wall.checkCollisions = true;
     }
 
-    // Tambahkan dinding sesuai denah
-    addWall(0,-20,40,5);
-    addWall(-20,-10,1,5);
-    addWall(20,-10,1,5);
-    addWall(0,0,40,5);
+    // === Dinding dari Denah (contoh layout berdasarkan gambar)
+    addWall(0, -20, 40, 5);      // belakang horizontal
+    addWall(-20, -10, 1, 5, 20); // kiri vertikal
+    addWall(20, -10, 1, 5, 20);  // kanan vertikal
+    addWall(0, 0, 40, 5);        // depan horizontal
+    addWall(0, -10, 20, 5);      // tengah horizontal
+    addWall(-10, -5, 1, 5, 10);  // partisi kiri
+    addWall(10, -5, 1, 5, 10);   // partisi kanan
 
-    // === Pohon ===
-    function addTree(x,z){
+    // === Pohon dari Titik Hijau ===
+    function addTree(x, z) {
       const trunk = BABYLON.MeshBuilder.CreateCylinder("trunk", {diameter:1, height:3}, scene);
-      trunk.position = new BABYLON.Vector3(x,1.5,z);
+      trunk.position = new BABYLON.Vector3(x, 1.5, z);
       trunk.material = new BABYLON.StandardMaterial("trunkMat", scene);
-      trunk.material.diffuseColor = new BABYLON.Color3(0.55,0.27,0.07);
+      trunk.material.diffuseColor = new BABYLON.Color3(0.55, 0.27, 0.07);
       trunk.checkCollisions = true;
 
       const leaves = BABYLON.MeshBuilder.CreateSphere("leaves", {diameter:3}, scene);
-      leaves.position = new BABYLON.Vector3(x,4,z);
+      leaves.position = new BABYLON.Vector3(x, 4, z);
       leaves.material = new BABYLON.StandardMaterial("leafMat", scene);
-      leaves.material.diffuseColor = new BABYLON.Color3(0,1,0);
+      leaves.material.diffuseColor = new BABYLON.Color3(0, 1, 0);
       leaves.checkCollisions = true;
     }
 
-    addTree(-10,-10);
-    addTree(10,-10);
+    addTree(-10, -10);
+    addTree(10, -10);
 
     // === Render Loop ===
     engine.runRenderLoop(() => {
