--- a/fps.html
+++ b/fps.html
@@ -12,40 +12,53 @@
   <canvas id="renderCanvas"></canvas>
 
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
+  <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+
   <script>
     const canvas = document.getElementById("renderCanvas");
     const engine = new BABYLON.Engine(canvas, true);
     const scene = new BABYLON.Scene(engine);
 
-    // === Cahaya ===
-    const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0), scene);
+    // === Langit Cerah (Skybox) ===
+    const skybox = BABYLON.MeshBuilder.CreateBox("skyBox", {size:1000.0}, scene);
+    const skyboxMaterial = new BABYLON.StandardMaterial("skyBoxMat", scene);
+    skyboxMaterial.backFaceCulling = false;
+    skyboxMaterial.reflectionTexture = new BABYLON.CubeTexture("https://assets.babylonjs.com/environments/skybox", scene);
+    skyboxMaterial.reflectionTexture.coordinatesMode = BABYLON.Texture.SKYBOX_MODE;
+    skyboxMaterial.diffuseColor = new BABYLON.Color3(0, 0, 0);
+    skyboxMaterial.specularColor = new BABYLON.Color3(0, 0, 0);
+    skybox.material = skyboxMaterial;
 
-    // === Kamera FPS ===
-    const camera = new BABYLON.UniversalCamera("camera", new BABYLON.Vector3(0, 2, 0), scene);
+    // === Matahari (Directional Light) ===
+    const sun = new BABYLON.DirectionalLight("sun", new BABYLON.Vector3(-1, -2, -1), scene);
+    sun.intensity = 1.2;
+
+    // === Kamera FPS di dalam denah ===
+    const camera = new BABYLON.UniversalCamera("camera", new BABYLON.Vector3(0, 2, -15), scene);
     camera.attachControl(canvas, true);
     camera.speed = 0.5;
     camera.angularSensibility = 500;
-
-    // === Aktifkan Collision & Gravity ===
-    scene.gravity = new BABYLON.Vector3(0, -0.5, 0);
-    scene.collisionsEnabled = true;
     camera.checkCollisions = true;
     camera.applyGravity = true;
     camera.ellipsoid = new BABYLON.Vector3(0.5, 1, 0.5);
     camera.ellipsoidOffset = new BABYLON.Vector3(0, 1, 0);
 
+    // === Aktifkan Collision & Gravity ===
+    scene.gravity = new BABYLON.Vector3(0, -0.5, 0);
+    scene.collisionsEnabled = true;
+
     // === Lantai ===
     const ground = BABYLON.MeshBuilder.CreateGround("ground", {width:100, height:100}, scene);
     ground.checkCollisions = true;
     const groundMat = new BABYLON.StandardMaterial("groundMat", scene);
-    groundMat.diffuseColor = new BABYLON.Color3(0.5,0.5,0.5);
+    groundMat.diffuseColor = new BABYLON.Color3(0.6,0.6,0.6);
     ground.material = groundMat;
 
-    // === Tekstur Batu untuk Dinding ===
+    // === Material Dinding Abu-Abu ===
     const wallMat = new BABYLON.StandardMaterial("wallMat", scene);
-    wallMat.diffuseTexture = new BABYLON.Texture("https://assets.babylonjs.com/environments/stone.jpg", scene);
+    wallMat.diffuseColor = new BABYLON.Color3(0.5, 0.5, 0.5);
 
-    // === Fungsi Tambah Dinding dari Denah ===
+    // === Fungsi Tambah Dinding ===
     function addWall(x, z, w, h, d = 1) {
       const wall = BABYLON.MeshBuilder.CreateBox("wall", {width: w, height: h, depth: d}, scene);
       wall.position = new BABYLON.Vector3(x, h / 2, z);
@@ -53,12 +66,12 @@
       wall.checkCollisions = true;
     }
 
-    // === Dinding dari Denah (contoh layout berdasarkan gambar)
-    addWall(0, -20, 40, 5);      // belakang horizontal
-    addWall(-20, -10, 1, 5, 20); // kiri vertikal
-    addWall(20, -10, 1, 5, 20);  // kanan vertikal
-    addWall(0, 0, 40, 5);        // depan horizontal
-    addWall(0, -10, 20, 5);      // tengah horizontal
+    // === Dinding dari Denah (disesuaikan dari gambar)
+    addWall(0, -20, 40, 5);      // belakang
+    addWall(-20, -10, 1, 5, 20); // kiri
+    addWall(20, -10, 1, 5, 20);  // kanan
+    addWall(0, 0, 40, 5);        // depan
+    addWall(0, -10, 20, 5);      // tengah
     addWall(-10, -5, 1, 5, 10);  // partisi kiri
     addWall(10, -5, 1, 5, 10);   // partisi kanan
 
