--- a/fps.html
+++ b/fps.html
@@ -1,106 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Babylon.js FPS Denah</title>
+  <title>A-Frame FPS Denah</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- A-Frame core -->
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <!-- Physics system (collisions) -->
+  <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v4.0.1/dist/aframe-physics-system.min.js"></script>
+  <!-- Environment component (sky, sun, clouds, ground) -->
+  <script src="https://cdn.jsdelivr.net/npm/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
   <style>
-    html, body { width: 100%; height: 100%; margin: 0; overflow: hidden; }
-    canvas { width: 100%; height: 100%; display: block; }
+    html, body { margin:0; height:100%; }
   </style>
 </head>
 <body>
-  <canvas id="renderCanvas"></canvas>
+  <a-scene physics="gravity: -9.8" renderer="antialias: true" background="color: #ECECEC">
+    <!-- Langit cerah, awan, dan matahari -->
+    <a-entity environment="preset: forest; skyType: atmosphere; lighting: day; fog: 0; ground: flat; groundColor: #9aa0a6; groundColor2: #9aa0a6; horizonColor: #88c9ff; shadow: true"></a-entity>
+    <a-entity light="type: directional; color: #fff7d6; intensity: 1.0" position="-10 20 -10"></a-entity>
 
-  <script src="https://cdn.babylonjs.com/babylon.js"></script>
-  <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <!-- Lantai (abu-abu, padat) -->
+    <a-plane position="0 0 0" rotation="-90 0 0"
+             width="100" height="100"
+             color="#9E9E9E"
+             static-body="shape: box">
+    </a-plane>
 
-  <script>
-    const canvas = document.getElementById("renderCanvas");
-    const engine = new BABYLON.Engine(canvas, true);
-    const scene = new BABYLON.Scene(engine);
+    <!-- Dinding abu-abu (padat) berdasarkan denah -->
+    <!-- Belakang horizontal -->
+    <a-box class="wall" position="0 2.5 -20" width="40" height="5" depth="1" color="#808080"
+           static-body="shape: box"></a-box>
+    <!-- Kiri vertikal -->
+    <a-box class="wall" position="-20 2.5 -10" width="1" height="5" depth="20" color="#808080"
+           static-body="shape: box"></a-box>
+    <!-- Kanan vertikal -->
+    <a-box class="wall" position="20 2.5 -10" width="1" height="5" depth="20" color="#808080"
+           static-body="shape: box"></a-box>
+    <!-- Depan horizontal -->
+    <a-box class="wall" position="0 2.5 0" width="40" height="5" depth="1" color="#808080"
+           static-body="shape: box"></a-box>
+    <!-- Tengah horizontal -->
+    <a-box class="wall" position="0 2.5 -10" width="20" height="5" depth="1" color="#808080"
+           static-body="shape: box"></a-box>
+    <!-- Partisi kiri -->
+    <a-box class="wall" position="-10 2.5 -5" width="1" height="5" depth="10" color="#808080"
+           static-body="shape: box"></a-box>
+    <!-- Partisi kanan -->
+    <a-box class="wall" position="10 2.5 -5" width="1" height="5" depth="10" color="#808080"
+           static-body="shape: box"></a-box>
 
-    // === Langit Cerah (Skybox) ===
-    const skybox = BABYLON.MeshBuilder.CreateBox("skyBox", {size:1000.0}, scene);
-    const skyboxMaterial = new BABYLON.StandardMaterial("skyBoxMat", scene);
-    skyboxMaterial.backFaceCulling = false;
-    skyboxMaterial.reflectionTexture = new BABYLON.CubeTexture("https://assets.babylonjs.com/environments/skybox", scene);
-    skyboxMaterial.reflectionTexture.coordinatesMode = BABYLON.Texture.SKYBOX_MODE;
-    skyboxMaterial.diffuseColor = new BABYLON.Color3(0, 0, 0);
-    skyboxMaterial.specularColor = new BABYLON.Color3(0, 0, 0);
-    skybox.material = skyboxMaterial;
+    <!-- Pohon hijau (padat) di titik hijau denah -->
+    <!-- Pohon 1 -->
+    <a-cylinder position="-10 1.5 -10" radius="0.5" height="3" color="#8B4513"
+                static-body="shape: cylinder"></a-cylinder>
+    <a-sphere position="-10 4 -10" radius="1.5" color="#00AA00"
+              static-body="shape: sphere"></a-sphere>
+    <!-- Pohon 2 -->
+    <a-cylinder position="10 1.5 -10" radius="0.5" height="3" color="#8B4513"
+                static-body="shape: cylinder"></a-cylinder>
+    <a-sphere position="10 4 -10" radius="1.5" color="#00AA00"
+              static-body="shape: sphere"></a-sphere>
 
-    // === Matahari (Directional Light) ===
-    const sun = new BABYLON.DirectionalLight("sun", new BABYLON.Vector3(-1, -2, -1), scene);
-    sun.intensity = 1.2;
-
-    // === Kamera FPS di dalam denah ===
-    const camera = new BABYLON.UniversalCamera("camera", new BABYLON.Vector3(0, 2, -15), scene);
-    camera.attachControl(canvas, true);
-    camera.speed = 0.5;
-    camera.angularSensibility = 500;
-    camera.checkCollisions = true;
-    camera.applyGravity = true;
-    camera.ellipsoid = new BABYLON.Vector3(0.5, 1, 0.5);
-    camera.ellipsoidOffset = new BABYLON.Vector3(0, 1, 0);
-
-    // === Aktifkan Collision & Gravity ===
-    scene.gravity = new BABYLON.Vector3(0, -0.5, 0);
-    scene.collisionsEnabled = true;
-
-    // === Lantai ===
-    const ground = BABYLON.MeshBuilder.CreateGround("ground", {width:100, height:100}, scene);
-    ground.checkCollisions = true;
-    const groundMat = new BABYLON.StandardMaterial("groundMat", scene);
-    groundMat.diffuseColor = new BABYLON.Color3(0.6,0.6,0.6);
-    ground.material = groundMat;
-
-    // === Material Dinding Abu-Abu ===
-    const wallMat = new BABYLON.StandardMaterial("wallMat", scene);
-    wallMat.diffuseColor = new BABYLON.Color3(0.5, 0.5, 0.5);
-
-    // === Fungsi Tambah Dinding ===
-    function addWall(x, z, w, h, d = 1) {
-      const wall = BABYLON.MeshBuilder.CreateBox("wall", {width: w, height: h, depth: d}, scene);
-      wall.position = new BABYLON.Vector3(x, h / 2, z);
-      wall.material = wallMat;
-      wall.checkCollisions = true;
-    }
-
-    // === Dinding dari Denah (disesuaikan dari gambar)
-    addWall(0, -20, 40, 5);      // belakang
-    addWall(-20, -10, 1, 5, 20); // kiri
-    addWall(20, -10, 1, 5, 20);  // kanan
-    addWall(0, 0, 40, 5);        // depan
-    addWall(0, -10, 20, 5);      // tengah
-    addWall(-10, -5, 1, 5, 10);  // partisi kiri
-    addWall(10, -5, 1, 5, 10);   // partisi kanan
-
-    // === Pohon dari Titik Hijau ===
-    function addTree(x, z) {
-      const trunk = BABYLON.MeshBuilder.CreateCylinder("trunk", {diameter:1, height:3}, scene);
-      trunk.position = new BABYLON.Vector3(x, 1.5, z);
-      trunk.material = new BABYLON.StandardMaterial("trunkMat", scene);
-      trunk.material.diffuseColor = new BABYLON.Color3(0.55, 0.27, 0.07);
-      trunk.checkCollisions = true;
-
-      const leaves = BABYLON.MeshBuilder.CreateSphere("leaves", {diameter:3}, scene);
-      leaves.position = new BABYLON.Vector3(x, 4, z);
-      leaves.material = new BABYLON.StandardMaterial("leafMat", scene);
-      leaves.material.diffuseColor = new BABYLON.Color3(0, 1, 0);
-      leaves.checkCollisions = true;
-    }
-
-    addTree(-10, -10);
-    addTree(10, -10);
-
-    // === Render Loop ===
-    engine.runRenderLoop(() => {
-      scene.render();
-    });
-
-    window.addEventListener("resize", () => {
-      engine.resize();
-    });
-  </script>
+    <!-- Kamera FPS di dalam denah dengan collision -->
+    <a-entity id="player"
+              position="0 1.6 -15"
+              camera
+              wasd-controls="acceleration: 30"
+              look-controls="pointerLockEnabled: true"
+              dynamic-body="shape: sphere; sphereRadius: 0.35; mass: 5; linearDamping: 0.2; angularDamping: 0.999">
+    </a-entity>
+  </a-scene>
 </body>
 </html>
