--- a/fps.html
+++ b/fps.html
@@ -3,66 +3,39 @@
 <head>
   <meta charset="utf-8">
   <title>A-Frame FPS Denah</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- A-Frame core -->
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-  <!-- Physics system (collisions) -->
   <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v4.0.1/dist/aframe-physics-system.min.js"></script>
-  <!-- Environment component (sky, sun, clouds, ground) -->
-  <script src="https://cdn.jsdelivr.net/npm/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
-  <style>
-    html, body { margin:0; height:100%; }
-  </style>
 </head>
 <body>
-  <a-scene physics="gravity: -9.8" renderer="antialias: true" background="color: #ECECEC">
-    <!-- Langit cerah, awan, dan matahari -->
-    <a-entity environment="preset: forest; skyType: atmosphere; lighting: day; fog: 0; ground: flat; groundColor: #9aa0a6; groundColor2: #9aa0a6; horizonColor: #88c9ff; shadow: true"></a-entity>
-    <a-entity light="type: directional; color: #fff7d6; intensity: 1.0" position="-10 20 -10"></a-entity>
+  <a-scene physics="gravity: -9.8">
+    <!-- Langit cerah -->
+    <a-sky color="#88c9ff"></a-sky>
+    <!-- Matahari -->
+    <a-entity light="type: directional; color: #fff7d6; intensity: 1.2" position="-10 20 -10"></a-entity>
 
-    <!-- Lantai (abu-abu, padat) -->
+    <!-- Lantai abu-abu dengan collision -->
     <a-plane position="0 0 0" rotation="-90 0 0"
              width="100" height="100"
              color="#9E9E9E"
-             static-body="shape: box">
+             static-body>
     </a-plane>
 
-    <!-- Dinding abu-abu (padat) berdasarkan denah -->
-    <!-- Belakang horizontal -->
-    <a-box class="wall" position="0 2.5 -20" width="40" height="5" depth="1" color="#808080"
-           static-body="shape: box"></a-box>
-    <!-- Kiri vertikal -->
-    <a-box class="wall" position="-20 2.5 -10" width="1" height="5" depth="20" color="#808080"
-           static-body="shape: box"></a-box>
-    <!-- Kanan vertikal -->
-    <a-box class="wall" position="20 2.5 -10" width="1" height="5" depth="20" color="#808080"
-           static-body="shape: box"></a-box>
-    <!-- Depan horizontal -->
-    <a-box class="wall" position="0 2.5 0" width="40" height="5" depth="1" color="#808080"
-           static-body="shape: box"></a-box>
-    <!-- Tengah horizontal -->
-    <a-box class="wall" position="0 2.5 -10" width="20" height="5" depth="1" color="#808080"
-           static-body="shape: box"></a-box>
-    <!-- Partisi kiri -->
-    <a-box class="wall" position="-10 2.5 -5" width="1" height="5" depth="10" color="#808080"
-           static-body="shape: box"></a-box>
-    <!-- Partisi kanan -->
-    <a-box class="wall" position="10 2.5 -5" width="1" height="5" depth="10" color="#808080"
-           static-body="shape: box"></a-box>
+    <!-- Dinding abu-abu sesuai denah -->
+    <a-box position="0 2.5 -20" width="40" height="5" depth="1" color="#808080" static-body></a-box>
+    <a-box position="-20 2.5 -10" width="1" height="5" depth="20" color="#808080" static-body></a-box>
+    <a-box position="20 2.5 -10" width="1" height="5" depth="20" color="#808080" static-body></a-box>
+    <a-box position="0 2.5 0" width="40" height="5" depth="1" color="#808080" static-body></a-box>
+    <a-box position="0 2.5 -10" width="20" height="5" depth="1" color="#808080" static-body></a-box>
+    <a-box position="-10 2.5 -5" width="1" height="5" depth="10" color="#808080" static-body></a-box>
+    <a-box position="10 2.5 -5" width="1" height="5" depth="10" color="#808080" static-body></a-box>
 
-    <!-- Pohon hijau (padat) di titik hijau denah -->
-    <!-- Pohon 1 -->
-    <a-cylinder position="-10 1.5 -10" radius="0.5" height="3" color="#8B4513"
-                static-body="shape: cylinder"></a-cylinder>
-    <a-sphere position="-10 4 -10" radius="1.5" color="#00AA00"
-              static-body="shape: sphere"></a-sphere>
-    <!-- Pohon 2 -->
-    <a-cylinder position="10 1.5 -10" radius="0.5" height="3" color="#8B4513"
-                static-body="shape: cylinder"></a-cylinder>
-    <a-sphere position="10 4 -10" radius="1.5" color="#00AA00"
-              static-body="shape: sphere"></a-sphere>
+    <!-- Pohon hijau -->
+    <a-cylinder position="-10 1.5 -10" radius="0.5" height="3" color="#8B4513" static-body></a-cylinder>
+    <a-sphere position="-10 4 -10" radius="1.5" color="#00AA00" static-body></a-sphere>
+    <a-cylinder position="10 1.5 -10" radius="0.5" height="3" color="#8B4513" static-body></a-cylinder>
+    <a-sphere position="10 4 -10" radius="1.5" color="#00AA00" static-body></a-sphere>
 
-    <!-- Kamera FPS di dalam denah dengan collision -->
+    <!-- Kamera FPS dengan collision -->
     <a-entity id="player"
               position="0 1.6 -15"
               camera
