--- a/fps.html
+++ b/fps.html
@@ -13,14 +13,14 @@
     <!-- Matahari -->
     <a-entity light="type: directional; color: #fff7d6; intensity: 1.2" position="-10 20 -10"></a-entity>
 
-    <!-- Lantai abu-abu dengan collision -->
+    <!-- Lantai abu-abu -->
     <a-plane position="0 0 0" rotation="-90 0 0"
              width="100" height="100"
              color="#9E9E9E"
              static-body>
     </a-plane>
 
-    <!-- Dinding abu-abu sesuai denah -->
+    <!-- Dinding abu-abu -->
     <a-box position="0 2.5 -20" width="40" height="5" depth="1" color="#808080" static-body></a-box>
     <a-box position="-20 2.5 -10" width="1" height="5" depth="20" color="#808080" static-body></a-box>
     <a-box position="20 2.5 -10" width="1" height="5" depth="20" color="#808080" static-body></a-box>
@@ -29,15 +29,15 @@
     <a-box position="-10 2.5 -5" width="1" height="5" depth="10" color="#808080" static-body></a-box>
     <a-box position="10 2.5 -5" width="1" height="5" depth="10" color="#808080" static-body></a-box>
 
-    <!-- Pohon hijau -->
+    <!-- Pohon -->
     <a-cylinder position="-10 1.5 -10" radius="0.5" height="3" color="#8B4513" static-body></a-cylinder>
     <a-sphere position="-10 4 -10" radius="1.5" color="#00AA00" static-body></a-sphere>
     <a-cylinder position="10 1.5 -10" radius="0.5" height="3" color="#8B4513" static-body></a-cylinder>
     <a-sphere position="10 4 -10" radius="1.5" color="#00AA00" static-body></a-sphere>
 
-    <!-- Kamera FPS dengan collision -->
+    <!-- Player (kamera FPS) di depan ruangan -->
     <a-entity id="player"
-              position="0 1.6 -15"
+              position="0 1.6 5"   <!-- posisi di depan dinding depan -->
               camera
               wasd-controls="acceleration: 30"
               look-controls="pointerLockEnabled: true"
