--- a/fps.html
+++ b/fps.html
@@ -2,47 +2,194 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>A-Frame FPS Denah</title>
+  <title>A-Frame FPS Denah – Dynamic WASD, Textures, Lighting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- A-Frame core -->
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <!-- Physics system (collisions) -->
   <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v4.0.1/dist/aframe-physics-system.min.js"></script>
+  <!-- Custom movement component for dynamic WASD + sprint -->
+  <script>
+    AFRAME.registerComponent('cs-move', {
+      schema: {
+        walkSpeed: {type: 'number', default: 5},   // m/s
+        sprintSpeed: {type: 'number', default: 9}, // m/s
+        airControl: {type: 'number', default: 0.2},
+        friction: {type: 'number', default: 3.0}
+      },
+      init: function () {
+        this.keys = {};
+        this.isSprinting = false;
+        window.addEventListener('keydown', e => {
+          this.keys[e.code] = true;
+          if (e.code === 'ShiftLeft' || e.code === 'ShiftRight') this.isSprinting = true;
+        });
+        window.addEventListener('keyup', e => {
+          this.keys[e.code] = false;
+          if (e.code === 'ShiftLeft' || e.code === 'ShiftRight') this.isSprinting = false;
+        });
+      },
+      tick: function (t, dt) {
+        const body = this.el.body; // cannon body from physics system
+        if (!body) return;
+        const secs = dt / 1000;
+        // Determine speed target
+        const speed = this.isSprinting ? this.data.sprintSpeed : this.data.walkSpeed;
+
+        // Camera forward/right vectors on XZ plane
+        const cam = this.el.getObject3D('camera');
+        if (!cam) return;
+        const dir = new THREE.Vector3();
+        cam.getWorldDirection(dir);
+        dir.y = 0; dir.normalize();
+        const right = new THREE.Vector3().crossVectors(dir, new THREE.Vector3(0,1,0)).normalize().multiplyScalar(-1);
+
+        // Input to desired velocity
+        let desired = new CANNON.Vec3(0, body.velocity.y, 0);
+        let move = new THREE.Vector3(0,0,0);
+        if (this.keys['KeyW']) move.add(dir);
+        if (this.keys['KeyS']) move.add(dir.clone().multiplyScalar(-1));
+        if (this.keys['KeyA']) move.add(right.clone().multiplyScalar(-1));
+        if (this.keys['KeyD']) move.add(right);
+        if (move.lengthSq() > 0) move.normalize().multiplyScalar(speed);
+
+        // Grounded check (simple: if near zero vertical velocity and contact)
+        const grounded = Math.abs(body.velocity.y) < 0.05 && body.position.y <= 1.7;
+        const control = grounded ? 1.0 : this.data.airControl;
+
+        // Blend current horizontal velocity towards desired (apply friction)
+        const currentXZ = new THREE.Vector2(body.velocity.x, body.velocity.z);
+        const desiredXZ = new THREE.Vector2(move.x, move.z);
+        const diff = desiredXZ.clone().sub(currentXZ);
+        const accel = control * 20; // responsiveness
+        currentXZ.add(diff.multiplyScalar(accel * secs));
+        // Apply friction when no input
+        if (desiredXZ.lengthSq() === 0) {
+          const f = Math.max(0, 1 - this.data.friction * secs);
+          currentXZ.multiplyScalar(f);
+        }
+        body.velocity.x = currentXZ.x;
+        body.velocity.z = currentXZ.y;
+
+        // Clamp max horizontal speed
+        const max = this.isSprinting ? this.data.sprintSpeed : this.data.walkSpeed;
+        const hv = Math.hypot(body.velocity.x, body.velocity.z);
+        if (hv > max) {
+          const k = max / hv;
+          body.velocity.x *= k;
+          body.velocity.z *= k;
+        }
+      }
+    });
+  </script>
+  <style>
+    html, body { margin:0; height:100%; }
+  </style>
 </head>
 <body>
-  <a-scene physics="gravity: -9.8">
-    <!-- Langit cerah -->
-    <a-sky color="#88c9ff"></a-sky>
-    <!-- Matahari -->
-    <a-entity light="type: directional; color: #fff7d6; intensity: 1.2" position="-10 20 -10"></a-entity>
+  <a-scene physics="gravity: -9.8"
+           renderer="antialias: true; colorManagement: true; physicallyCorrectLights: true; shadowMap: true">
 
-    <!-- Lantai abu-abu -->
-    <a-plane position="0 0 0" rotation="-90 0 0"
-             width="100" height="100"
-             color="#9E9E9E"
-             static-body>
-    </a-plane>
+    <!-- Assets (textures) -->
+    <a-assets>
+      <!-- 360 sky (equirectangular) -->
+      <img id="sky360" crossorigin="anonymous"
+           src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg">
+      <!-- Concrete floor -->
+      <img id="texConcrete" crossorigin="anonymous"
+           src="https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/textures/cement.jpg">
+      <!-- Brick wall (gray tone) -->
+      <img id="texBrick" crossorigin="anonymous"
+           src="https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/textures/brick_diffuse.jpg">
+      <!-- Optional normal map for wall -->
+      <img id="texBrickNormal" crossorigin="anonymous"
+           src="https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/textures/brick_bump.jpg">
+    </a-assets>
 
-    <!-- Dinding abu-abu -->
-    <a-box position="0 2.5 -20" width="40" height="5" depth="1" color="#808080" static-body></a-box>
-    <a-box position="-20 2.5 -10" width="1" height="5" depth="20" color="#808080" static-body></a-box>
-    <a-box position="20 2.5 -10" width="1" height="5" depth="20" color="#808080" static-body></a-box>
-    <a-box position="0 2.5 0" width="40" height="5" depth="1" color="#808080" static-body></a-box>
-    <a-box position="0 2.5 -10" width="20" height="5" depth="1" color="#808080" static-body></a-box>
-    <a-box position="-10 2.5 -5" width="1" height="5" depth="10" color="#808080" static-body></a-box>
-    <a-box position="10 2.5 -5" width="1" height="5" depth="10" color="#808080" static-body></a-box>
+    <!-- Sky 360 with sun lighting -->
+    <a-sky src="#sky360" rotation="0 0 0"></a-sky>
 
-    <!-- Pohon -->
-    <a-cylinder position="-10 1.5 -10" radius="0.5" height="3" color="#8B4513" static-body></a-cylinder>
-    <a-sphere position="-10 4 -10" radius="1.5" color="#00AA00" static-body></a-sphere>
-    <a-cylinder position="10 1.5 -10" radius="0.5" height="3" color="#8B4513" static-body></a-cylinder>
-    <a-sphere position="10 4 -10" radius="1.5" color="#00AA00" static-body></a-sphere>
-
-    <!-- Player (kamera FPS) di depan ruangan -->
-    <a-entity id="player"
-              position="0 1.6 5"   <!-- posisi di depan dinding depan -->
-              camera
-              wasd-controls="acceleration: 30"
-              look-controls="pointerLockEnabled: true"
-              dynamic-body="shape: sphere; sphereRadius: 0.35; mass: 5; linearDamping: 0.2; angularDamping: 0.999">
+    <!-- Lighting: directional sun + ambient -->
+    <a-entity light="type: ambient; color: #ffffff; intensity: 0.35"></a-entity>
+    <a-entity light="type: directional; color: #fff7d6; intensity: 1.1"
+              position="-20 40 -20"
+              shadow="cast: true">
     </a-entity>
+
+    <!-- Ground (concrete texture) -->
+    <a-plane position="0 0 0" rotation="-90 0 0"
+             width="120" height="120"
+             material="src: #texConcrete; repeat: 20 20; metalness: 0.0; roughness: 1.0"
+             shadow="receive: true"
+             static-body></a-plane>
+
+    <!-- Walls (brick texture, tinted gray) -->
+    <!-- back horizontal -->
+    <a-box position="0 2.5 -20" width="40" height="5" depth="1"
+           material="src: #texBrick; color: #9a9a9a; normalMap: #texBrickNormal; repeat: 6 1"
+           shadow="cast: true; receive: true"
+           static-body></a-box>
+    <!-- left vertical -->
+    <a-box position="-20 2.5 -10" width="1" height="5" depth="20"
+           material="src: #texBrick; color: #9a9a9a; normalMap: #texBrickNormal; repeat: 1 3"
+           shadow="cast: true; receive: true"
+           static-body></a-box>
+    <!-- right vertical -->
+    <a-box position="20 2.5 -10" width="1" height="5" depth="20"
+           material="src: #texBrick; color: #9a9a9a; normalMap: #texBrickNormal; repeat: 1 3"
+           shadow="cast: true; receive: true"
+           static-body></a-box>
+    <!-- front horizontal -->
+    <a-box position="0 2.5 0" width="40" height="5" depth="1"
+           material="src: #texBrick; color: #9a9a9a; normalMap: #texBrickNormal; repeat: 6 1"
+           shadow="cast: true; receive: true"
+           static-body></a-box>
+    <!-- middle horizontal -->
+    <a-box position="0 2.5 -10" width="20" height="5" depth="1"
+           material="src: #texBrick; color: #9a9a9a; normalMap: #texBrickNormal; repeat: 3 1"
+           shadow="cast: true; receive: true"
+           static-body></a-box>
+    <!-- left partition -->
+    <a-box position="-10 2.5 -5" width="1" height="5" depth="10"
+           material="src: #texBrick; color: #9a9a9a; normalMap: #texBrickNormal; repeat: 1 2"
+           shadow="cast: true; receive: true"
+           static-body></a-box>
+    <!-- right partition -->
+    <a-box position="10 2.5 -5" width="1" height="5" depth="10"
+           material="src: #texBrick; color: #9a9a9a; normalMap: #texBrickNormal; repeat: 1 2"
+           shadow="cast: true; receive: true"
+           static-body></a-box>
+
+    <!-- Trees -->
+    <!-- Tree 1 -->
+    <a-cylinder position="-10 1.5 -10" radius="0.5" height="3"
+                material="color: #8B4513; metalness: 0; roughness: 1"
+                shadow="cast: true; receive: true"
+                static-body></a-cylinder>
+    <a-sphere position="-10 4 -10" radius="1.5"
+              material="color: #1aa140; metalness: 0; roughness: 1"
+              shadow="cast: true; receive: true"
+              static-body></a-sphere>
+    <!-- Tree 2 -->
+    <a-cylinder position="10 1.5 -10" radius="0.5" height="3"
+                material="color: #8B4513; metalness: 0; roughness: 1"
+                shadow="cast: true; receive: true"
+                static-body></a-cylinder>
+    <a-sphere position="10 4 -10" radius="1.5"
+              material="color: #1aa140; metalness: 0; roughness: 1"
+              shadow="cast: true; receive: true"
+              static-body></a-sphere>
+
+    <!-- Player (camera) inside the room, dynamic body + pointer lock -->
+    <a-entity id="player"
+              position="0 1.7 -12"
+              camera
+              look-controls="pointerLockEnabled: true"
+              cs-move="walkSpeed: 5; sprintSpeed: 9; airControl: 0.25; friction: 3.0"
+              dynamic-body="shape: sphere; sphereRadius: 0.35; mass: 60; linearDamping: 0.15; angularDamping: 0.999"
+              shadow="cast: false; receive: false">
+    </a-entity>
+
   </a-scene>
 </body>
 </html>
